# eink-vnc

./: .gitignore  LICENSE  README.md  listen_for_ereader.sh  pc_connect_watch.sh  research.org  try_connect.sh
.github/: FUNDING.yml
.github/workflows/: build.yaml
client/: Cargo.toml  Cross.toml  build.rs  build.sh  download.sh
client/src/: device.rs  geom.rs  input.rs  main.rs
client/src/framebuffer/: image.rs  kobo1.rs  kobo2.rs  mod.rs
client/src/security/: apple.rs  des.rs  md5.rs  mod.rs
client/src/settings/: mod.rs
client/src/vnc/: client.rs  mod.rs  protocol.rs  proxy.rs  zrle.rs
