[package]
authors = ["Maxim Marshall <m@zmarshall.nl>"]
name = "einkvnc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "einkvnc"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
clap = "3.2"
lazy_static = "1.4.0"
libc = "0.2.126"
png = "0.17.5"
serde = { version = "1.0.140", features = ["derive"] }
byteorder = "1.4.3"
flate2 = "1.0.24"
nix = "0.24.2"
anyhow = "1.0.58"
fxhash = "0.2.1"

[profile.release-minsized]
inherits = "release"
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
strip = true

[features]
default = ["eink_device"]
eink_device = []
